--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Header Container -->
     <header class="header-root-container">
       <div class="header-main-cont container">
         <nav class="header-nav-container">
@@ -64,21 +65,27 @@
       </div>
     </header>
 
-    <!-- Main Content -->
+    <!-- Main Conteiner -->
     <main>
-      <!-- Main Order Container -->
+      <!-- Main Order Section -->
       <section class="order-section">
         <div class="container">
           <h1 class="order-title">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
       </section>
-      <!-- Stratagy Item Container -->
+
+      <!-- Stratagy Item Section -->
       <section class="strategy-section section">
         <div class="container">
-          <h2 class="visually-hidden" aria-hidden="true">Section 2</h2>
+          <h2 class="visually-hidden" aria-hidden="true">Advantages</h2>
           <ul class="strategy-list-container">
             <li class="strategy-list-item">
+              <div class="strategy-svg-icon">
+                <svg width="64" height="64">
+                  <use href="/images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="strategy-head-title">Strategy</h3>
               <p class="strategy-text">
                 Our goal is to identify the business problem to walk away with
@@ -86,6 +93,11 @@
               </p>
             </li>
             <li class="strategy-list-item">
+              <div class="strategy-svg-icon">
+                <svg width="64" height="64">
+                  <use href="/images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="strategy-head-title">Punctuality</h3>
               <p class="strategy-text">
                 Bring the key message to the brand's audience for the best price
@@ -93,6 +105,11 @@
               </p>
             </li>
             <li class="strategy-list-item">
+              <div class="strategy-svg-icon">
+                <svg width="64" height="64">
+                  <use href="/images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="strategy-head-title">Diligence</h3>
               <p class="strategy-text">
                 Research and confirm brands that present the strongest digital
@@ -100,6 +117,11 @@
               </p>
             </li>
             <li class="strategy-list-item">
+              <div class="strategy-svg-icon">
+                <svg width="64" height="64">
+                  <use href="/images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="strategy-head-title">Technologies</h3>
               <p class="strategy-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -127,6 +149,29 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Mark Guerrero</h3>
                 <p class="team-section-item-text">Product Designer</p>
+                <!-- social media -->
+                <div class="team-social-container">
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-section-list">
@@ -139,6 +184,29 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Tom Ford</h3>
                 <p class="team-section-item-text">Frontend Developer</p>
+                <!-- social media -->
+                <div class="team-social-container">
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-section-list">
@@ -151,6 +219,29 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Camila Garcia</h3>
                 <p class="team-section-item-text">Marketing</p>
+                <!-- social media -->
+                <div class="team-social-container">
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-section-list">
@@ -163,6 +254,29 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Daniel Wilson</h3>
                 <p class="team-section-item-text">UI Designer</p>
+                <!-- social media -->
+                <div class="team-social-container">
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="team-social-link" href="#">
+                    <svg width="24" height="24">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -175,60 +289,100 @@
           <h2 class="portfolio-section-title">Our Portfolio</h2>
           <ul class="portfolio-section">
             <li class="portfolio-section-list">
-              <img
-                src="./images/bankingapp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img-over-con">
+                <img
+                  src="./images/bankingapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
+
               <div class="portfolio-section-text-cont">
                 <h3 class="portfolio-section-list-title">Banking App</h3>
                 <p class="portfolio-section-list-text">App</p>
               </div>
             </li>
+
             <li class="portfolio-section-list">
-              <img
-                src="./images/cashlesspayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img-over-con">
+                <img
+                  src="./images/cashlesspayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-section-text-cont">
                 <h3 class="portfolio-section-list-title">Cashless Payment</h3>
                 <p class="portfolio-section-list-text">Marketing</p>
               </div>
             </li>
+
             <li class="portfolio-section-list">
-              <img
-                src="./images/meditationapp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img-over-con">
+                <img
+                  src="./images/meditationapp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-section-text-cont">
                 <h3 class="portfolio-section-list-title">Meditation App</h3>
                 <p class="portfolio-section-list-text">App</p>
               </div>
             </li>
+
             <li class="portfolio-section-list">
-              <img
-                src="./images/taxiservice.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img-over-con">
+                <img
+                  src="./images/taxiservice.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-section-text-cont">
                 <h3 class="portfolio-section-list-title">Taxi Service</h3>
                 <p class="portfolio-section-list-text">Marketing</p>
               </div>
             </li>
+
             <li class="portfolio-section-list">
-              <img
-                src="./images/screenillustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img-over-con">
+                <img
+                  src="./images/screenillustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-section-text-cont">
                 <h3 class="portfolio-section-list-title">
                   Screen Illustrations
@@ -236,13 +390,21 @@
                 <p class="portfolio-section-list-text">Design</p>
               </div>
             </li>
+
             <li class="portfolio-section-list">
-              <img
-                src="./images/onlinecourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img-over-con">
+                <img
+                  src="./images/onlinecourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-section-text-cont">
                 <h3 class="portfolio-section-list-title">Online Courses</h3>
                 <p class="portfolio-section-list-text">Marketing</p>
@@ -253,16 +415,45 @@
       </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer Conteiner-->
     <footer class="footer-container">
-      <div class="container">
-        <a class="footer-logo-first-part" href="./index.html"
-          >Web<span class="footer-logo-second-part">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-logo-content-wrapper container">
+        <div class="footer-logo-container">
+          <a class="footer-logo-first-part" href="./index.html"
+            >Web<span class="footer-logo-second-part">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <!-- Social Media -->
+        <div class="footer-social-media-wrapper">
+          <h4 class="footer-social-media-title">Social media</h4>
+          <div class="footer-social-container">
+            <a class="fiiter-social-link" href="#">
+              <svg width="24" height="24">
+                <use href="/images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+            <a class="fiiter-social-link" href="#">
+              <svg width="24" height="24">
+                <use href="/images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+            <a class="fiiter-social-link" href="#">
+              <svg width="24" height="24">
+                <use href="/images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+            <a class="fiiter-social-link" href="#">
+              <svg width="24" height="24">
+                <use href="/images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
