Upfate SVG icons path

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <li class="strategy-list-item">
               <div class="strategy-svg-icon">
                 <svg width="64" height="64">
-                  <use href="/images/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="strategy-head-title">Strategy</h3>
@@ -95,7 +95,7 @@
             <li class="strategy-list-item">
               <div class="strategy-svg-icon">
                 <svg width="64" height="64">
-                  <use href="/images/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="strategy-head-title">Punctuality</h3>
@@ -107,7 +107,7 @@
             <li class="strategy-list-item">
               <div class="strategy-svg-icon">
                 <svg width="64" height="64">
-                  <use href="/images/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="strategy-head-title">Diligence</h3>
@@ -119,7 +119,7 @@
             <li class="strategy-list-item">
               <div class="strategy-svg-icon">
                 <svg width="64" height="64">
-                  <use href="/images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="strategy-head-title">Technologies</h3>
@@ -153,22 +153,22 @@
                 <div class="team-social-container">
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </div>
@@ -188,22 +188,22 @@
                 <div class="team-social-container">
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </div>
@@ -223,22 +223,22 @@
                 <div class="team-social-container">
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </div>
@@ -258,22 +258,22 @@
                 <div class="team-social-container">
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                   <a class="team-social-link" href="#">
                     <svg width="24" height="24">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </div>
@@ -434,22 +434,22 @@
           <div class="footer-social-container">
             <a class="fiiter-social-link" href="#">
               <svg width="24" height="24">
-                <use href="/images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
             <a class="fiiter-social-link" href="#">
               <svg width="24" height="24">
-                <use href="/images/icons.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
             <a class="fiiter-social-link" href="#">
               <svg width="24" height="24">
-                <use href="/images/icons.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
             <a class="fiiter-social-link" href="#">
               <svg width="24" height="24">
-                <use href="/images/icons.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </div>
