removed unnecessary div in 3 sections

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <!-- Main Conteiner -->
     <main>
       <!-- Main Order Section -->
-      <section class="order-section">
-        <div class="order-section-wrapper container">
+      <section class="order-section container">
+        <div class="order-section-wrapper">
           <h1 class="order-title">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
@@ -149,55 +149,38 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Mark Guerrero</h3>
                 <p class="team-section-item-text">Product Designer</p>
+
                 <!-- social media icons -->
-                <div class="team-social-container-wrapper">
-                  <ul class="team-social-container">
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="instagram">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="twitter">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="faceboock">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="linkedin">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="team-social-container">
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="instagram">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="twitter">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="faceboock">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="linkedin">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-section-list">
@@ -210,55 +193,38 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Tom Ford</h3>
                 <p class="team-section-item-text">Frontend Developer</p>
+
                 <!-- social media icons -->
-                <div class="team-social-container">
-                  <ul class="team-social-container">
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="instagram">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="twitter">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="faceboock">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="linkedin">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="team-social-container">
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="instagram">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="twitter">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="faceboock">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="linkedin">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-section-list">
@@ -271,55 +237,38 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Camila Garcia</h3>
                 <p class="team-section-item-text">Marketing</p>
+
                 <!-- social media icons -->
-                <div class="team-social-container">
-                  <ul class="team-social-container">
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="instagram">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="twitter">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="faceboock">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="linkedin">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="team-social-container">
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="instagram">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="twitter">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="faceboock">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="linkedin">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-section-list">
@@ -332,55 +281,38 @@
               <div class="team-section-text-cont">
                 <h3 class="team-section-item-title">Daniel Wilson</h3>
                 <p class="team-section-item-text">UI Designer</p>
+
                 <!-- social media icons -->
-                <div class="team-social-container">
-                  <ul class="team-social-container">
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="instagram">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="twitter">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="faceboock">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a class="team-social-link" href="#" title="linkedin">
-                        <svg
-                          class="team-social-link-icon"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="team-social-container">
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="instagram">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="twitter">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="faceboock">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a class="team-social-link" href="#" title="linkedin">
+                      <svg class="team-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
